# seismo-loader

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  gen_req.py  package-lock.json  package.json  pyproject.toml  readme_building_executables.md  requirements.txt  run-win.ps1  run.sh  run_app.py  setup-linux-mac.sh  setup-win.ps1  setup-windows.ps1  setup.sh  useful_links.md
data/: 1K.FA18..SHE.D-1.2014  database.sql
notebooks/: Run_Script.ipynb  seismic_data_analysis.ipynb
seed_vault/: cli.py
seed_vault/enums/: config.py
seed_vault/models/: common.py  config.py  exception.py
seed_vault/service/: base.py  config.cfg  config_template.cfg  db.py  events.py  example_event.cfg  seedvault.0.40.py  seismoloader.py  stations.py  waveform.py
seed_vault/ui/: 1_🌎_main.py  main.py
seed_vault/ui/components/: base.py  data_explorer.py  display_log.py  map.py  settings.py  waveform.py  workflows.py  workflows_combined.py
seed_vault/ui/pages/: 10_settings.py  10_⚙️_settings.py  20_🛢️_db_explorer.py  30_📜_license.py
seed_vault/ui/pages/helpers/: 1_event_based.py  2_station_based.py  common.py  dataselect.py
seed_vault/utils/: clients.py  constants.py  extra_clients.json  orig_clients.json
seismic_data/: cli.py
seismic_data/enums/: common.py  config.py  stations.py  ui.py
seismic_data/models/: common.py  config.py  events.py
seismic_data/service/: config.cfg  config_template.cfg  db.py  events.py  example.cfg  example_continuous.cfg  example_event.cfg  gen_config_models.py  seedvault.0.40.py  seismoloader.0.33.py  seismoloader.py  seismoloader_update.py  stations.py  utils.py  waveform.py
seismic_data/ui/: app.py  main.py
seismic_data/ui/components/: base.py  card.py  event_filter.py  events.py  map.py  station_filter.py  stations.py  waveform.py  workflows.py  workflows_combined.py  workflows_tabs.py
seismic_data/ui/helpers/: events.py  map.py
seismic_data/ui/pages/: 10_settings.py  1_event_based.py  1_events.py  2_station_based.py  2_stations.py  3_test_event.py  4_test_station.py  dataselect.py  events.py
seismic_data/ui/pages/helpers/: 1_event_based.py  2_station_based.py  common.py  dataselect.py  events.py
tests/: example_continuous.cfg  example_event.cfg  seismoloader_orig.py
