[tool.poetry]
name = "seismic_data"
version = "0.1.0"
description = ""
package-mode = true
authors = ["Ben Motevalli <mot032@csiro.au>"]
readme = "README.md"
packages = [{ include = "seismic_data" }]


[tool.poetry.scripts]
seismo-loader = "seismic_data.cli:cli"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.35.0"
pandas = "^2.2.2"
folium = "^0.16.0"
requests = "^2.32.3"
streamlit-folium = "^0.20.0"
click = "^8.1.7"
tqdm = "^4.66.5"
obspy = "^1.4.1"
tabulate = "^0.9.0"
numpy = "^1.21"
matplotlib = "^3.8.5"
pydantic = "^2.9.1"
jupyter = "^1.0.0"
seaborn = "^0.13.0"
plotly = "^5.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"
